--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 idna==3.4
 psycopg2-binary==2.9.5
+python-decouple==3.7
 PyJWT==2.6.0
 pytz==2022.7.1
 PyYAML==6.0
@@ -16,3 +17,4 @@ stripe==5.0.0
 tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.26.14
+gunicorn==20.1.0
